--- a/package.json
+++ b/package.json
@@ -1,68 +1,65 @@
 {
-  "author": "Felix Geisendörfer <felix@debuggable.com> (http://debuggable.com/)",
-  "name": "form-data",
-  "description": "A library to create readable \"multipart/form-data\" streams. Can be used to submit forms and file uploads to other web applications.",
-  "version": "4.0.0",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/form-data/form-data.git"
-  },
-  "main": "./lib/form_data",
-  "browser": "./lib/browser",
-  "typings": "./index.d.ts",
-  "scripts": {
-    "pretest": "rimraf coverage test/tmp",
-    "test": "istanbul cover test/run.js",
-    "posttest": "istanbul report lcov text",
-    "lint": "eslint lib/*.js test/*.js test/integration/*.js",
-    "report": "istanbul report lcov text",
-    "ci-lint": "is-node-modern 8 && npm run lint || is-node-not-modern 8",
-    "ci-test": "npm run test && npm run browser && npm run report",
-    "predebug": "rimraf coverage test/tmp",
-    "debug": "verbose=1 ./test/run.js",
-    "browser": "browserify -t browserify-istanbul test/run-browser.js | obake --coverage",
-    "check": "istanbul check-coverage coverage/coverage*.json",
-    "files": "pkgfiles --sort=name",
-    "get-version": "node -e \"console.log(require('./package.json').version)\"",
-    "update-readme": "sed -i.bak 's/\\/master\\.svg/\\/v'$(npm --silent run get-version)'.svg/g' README.md",
-    "restore-readme": "mv README.md.bak README.md",
-    "prepublish": "in-publish && npm run update-readme || not-in-publish",
-    "postpublish": "npm run restore-readme"
-  },
-  "pre-commit": [
-    "lint",
-    "ci-test",
-    "check"
-  ],
-  "engines": {
-    "node": ">= 6"
-  },
-  "dependencies": {
-    "asynckit": "^0.4.0",
-    "combined-stream": "^1.0.8",
-    "mime-types": "^2.1.12"
-  },
-  "devDependencies": {
-    "@types/node": "^12.0.10",
-    "browserify": "^13.1.1",
-    "browserify-istanbul": "^2.0.0",
-    "coveralls": "^3.0.4",
-    "cross-spawn": "^6.0.5",
-    "eslint": "^6.0.1",
-    "fake": "^0.2.2",
-    "far": "^0.0.7",
-    "formidable": "^1.0.17",
-    "in-publish": "^2.0.0",
-    "is-node-modern": "^1.0.0",
-    "istanbul": "^0.4.5",
-    "obake": "^0.1.2",
-    "puppeteer": "^1.19.0",
-    "pkgfiles": "^2.3.0",
-    "pre-commit": "^1.1.3",
-    "request": "^2.88.0",
-    "rimraf": "^2.7.1",
-    "tape": "^4.6.2",
-    "typescript": "^3.5.2"
-  },
-  "license": "MIT"
+    "name": "laravel-vite-plugin",
+    "version": "1.0.5",
+    "description": "Laravel plugin for Vite.",
+    "keywords": [
+        "laravel",
+        "vite",
+        "vite-plugin"
+    ],
+    "homepage": "https://github.com/laravel/vite-plugin",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/laravel/vite-plugin"
+    },
+    "license": "MIT",
+    "author": "Laravel",
+    "type": "module",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "default": "./dist/index.js"
+        },
+        "./inertia-helpers": {
+            "types": "./inertia-helpers/index.d.ts",
+            "default": "./inertia-helpers/index.js"
+        }
+    },
+    "types": "./dist/index.d.ts",
+    "files": [
+        "/dist",
+        "/inertia-helpers"
+    ],
+    "bin": {
+        "clean-orphaned-assets": "bin/clean.js"
+    },
+    "scripts": {
+        "build": "npm run build-plugin && npm run build-inertia-helpers",
+        "build-plugin": "rm -rf dist && npm run build-plugin-types && npm run build-plugin-esm && cp src/dev-server-index.html dist/",
+        "build-plugin-types": "tsc --emitDeclarationOnly",
+        "build-plugin-esm": "esbuild src/index.ts --platform=node --format=esm --outfile=dist/index.js",
+        "build-inertia-helpers": "rm -rf inertia-helpers && tsc --project tsconfig.inertia-helpers.json",
+        "lint": "eslint --ext .ts ./src ./tests",
+        "test": "vitest run"
+    },
+    "devDependencies": {
+        "@types/node": "^18.11.9",
+        "@typescript-eslint/eslint-plugin": "^5.21.0",
+        "@typescript-eslint/parser": "^5.21.0",
+        "esbuild": "0.16.10",
+        "eslint": "^8.14.0",
+        "typescript": "^4.6.4",
+        "vite": "^5.0.0",
+        "vitest": "^0.34.4"
+    },
+    "peerDependencies": {
+        "vite": "^5.0.0"
+    },
+    "engines": {
+        "node": "^18.0.0 || >=20.0.0"
+    },
+    "dependencies": {
+        "picocolors": "^1.0.0",
+        "vite-plugin-full-reload": "^1.1.0"
+    }
 }
