--- a/package.json
+++ b/package.json
@@ -1,65 +1,34 @@
 {
-    "name": "laravel-vite-plugin",
-    "version": "1.0.5",
-    "description": "Laravel plugin for Vite.",
-    "keywords": [
-        "laravel",
-        "vite",
-        "vite-plugin"
-    ],
-    "homepage": "https://github.com/laravel/vite-plugin",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/laravel/vite-plugin"
-    },
-    "license": "MIT",
-    "author": "Laravel",
-    "type": "module",
-    "exports": {
-        ".": {
-            "types": "./dist/index.d.ts",
-            "default": "./dist/index.js"
-        },
-        "./inertia-helpers": {
-            "types": "./inertia-helpers/index.d.ts",
-            "default": "./inertia-helpers/index.js"
-        }
-    },
-    "types": "./dist/index.d.ts",
-    "files": [
-        "/dist",
-        "/inertia-helpers"
-    ],
-    "bin": {
-        "clean-orphaned-assets": "bin/clean.js"
-    },
-    "scripts": {
-        "build": "npm run build-plugin && npm run build-inertia-helpers",
-        "build-plugin": "rm -rf dist && npm run build-plugin-types && npm run build-plugin-esm && cp src/dev-server-index.html dist/",
-        "build-plugin-types": "tsc --emitDeclarationOnly",
-        "build-plugin-esm": "esbuild src/index.ts --platform=node --format=esm --outfile=dist/index.js",
-        "build-inertia-helpers": "rm -rf inertia-helpers && tsc --project tsconfig.inertia-helpers.json",
-        "lint": "eslint --ext .ts ./src ./tests",
-        "test": "vitest run"
-    },
-    "devDependencies": {
-        "@types/node": "^18.11.9",
-        "@typescript-eslint/eslint-plugin": "^5.21.0",
-        "@typescript-eslint/parser": "^5.21.0",
-        "esbuild": "0.16.10",
-        "eslint": "^8.14.0",
-        "typescript": "^4.6.4",
-        "vite": "^5.0.0",
-        "vitest": "^0.34.4"
-    },
-    "peerDependencies": {
-        "vite": "^5.0.0"
-    },
-    "engines": {
-        "node": "^18.0.0 || >=20.0.0"
-    },
-    "dependencies": {
-        "picocolors": "^1.0.0",
-        "vite-plugin-full-reload": "^1.1.0"
-    }
+  "name": "proxy-from-env",
+  "version": "1.1.0",
+  "description": "Offers getProxyForUrl to get the proxy URL for a URL, respecting the *_PROXY (e.g. HTTP_PROXY) and NO_PROXY environment variables.",
+  "main": "index.js",
+  "scripts": {
+    "lint": "eslint *.js",
+    "test": "mocha ./test.js --reporter spec",
+    "test-coverage": "istanbul cover ./node_modules/.bin/_mocha -- --reporter spec"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Rob--W/proxy-from-env.git"
+  },
+  "keywords": [
+    "proxy",
+    "http_proxy",
+    "https_proxy",
+    "no_proxy",
+    "environment"
+  ],
+  "author": "Rob Wu <rob@robwu.nl> (https://robwu.nl/)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Rob--W/proxy-from-env/issues"
+  },
+  "homepage": "https://github.com/Rob--W/proxy-from-env#readme",
+  "devDependencies": {
+    "coveralls": "^3.0.9",
+    "eslint": "^6.8.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^7.1.0"
+  }
 }
